public/css/style.css
/*@media (prefers-color-scheme: light) {
    :root{
        --background-color: #efefef;
        --container-background: fff;
    }
}
@media (prefers-color-scheme: dark) {
    :root{
        --background-color: #4d4d4d;
        --container-background: rgb(175, 174, 174);
    }
}*/

body{
    background-color: #efefef;
    font-family: 'Raleway', serif;
}

/*.container{
    background-color: var(--container-background);
}*/

#map {
    width: 100%;
    height: 500px;
}

.btn-red{
    background-color: rgb(116, 6, 6);
    color: white;
    font-size: 18px;
    width: 60%;
}

.btn-red:hover{
    background-color: rgb(80, 12, 12);
    color: lightgray;
    font-size: 18px;
    width: 60%;
}

.btn-dark-green{
    background-color: rgb(48, 136, 48);
    color: white;
    font-size: 18px;
    width: 60%;
}

.btn-dark-green:hover{
    background-color: rgb(42, 112, 42);
    color: lightgray;
    font-size: 18px;
    width: 60%;
}

.link-title{
    font-size: x-large;
    color: rgb(51, 51, 143);
    font-weight: bold;
    margin-bottom: 0;
}

.link-body{
    font-size: medium;
    color: rgb(44, 44, 44);
    font-weight: normal;
}

a:hover{
    text-decoration: none;
}

li:hover{
    background-color: #ececec;
}

@media only screen and (min-width: 768px) {
    #floating-header {
        position: absolute;
        top: 60px;
        left: 50%;
        transform: translate(-50%);
        text-align: center;
        padding: 5px 25px;
        padding-top: 10px;
        color: #efefef;
        border-bottom-left-radius: 45px;
        border-bottom-right-radius: 45px;
    }
}

@media only screen and  (max-device-width : 767px){ 
    #floating-header {
        position: absolute;
        bottom: 0px;
        left: 50%;
        transform: translate(-50%);
        text-align: center;
        padding: 5px 25px;
        padding-top: 10px;
        color: #efefef;
        border-top-left-radius: 45px;
        border-top-right-radius: 45px;
    }      
}

